attached_assets/Pasted-Run-arduino-cli-compile-fqbn-esp8266-esp8266-nodemcuv2-arduino-cli-compile-fqbn-esp8266-esp8-1763554549609_1763554549609.txt
Run arduino-cli compile --fqbn esp8266:esp8266:nodemcuv2 \
  arduino-cli compile --fqbn esp8266:esp8266:nodemcuv2 \
    --build-property "build.flash_size=4M3M" \
    --build-property "compiler.cpp.extra_flags=-DUPDATE_SERVER_URL=\"***\" -DDOWNLOAD_API_KEY=\"***\" -DFIRMWARE_VERSION=\"2025.11.19.6\"" \
    --output-dir build/esp8266 \
    firmware/ski-clock-neo
  cp build/esp8266/ski-clock-neo.ino.bin build/ski-clock-neo-esp8266.bin
  shell: /usr/bin/bash -e {0}
/home/runner/work/ski-clock-neo/ski-clock-neo/firmware/ski-clock-neo/ski-clock-neo.ino:7: warning: "FIRMWARE_VERSION" redefined
    7 | #define FIRMWARE_VERSION "v1.0.0"
      | 
<command-line>: note: this is the location of the previous definition
In file included from /home/runner/work/ski-clock-neo/ski-clock-neo/firmware/ski-clock-neo/ski-clock-neo.ino:12:
/home/runner/work/ski-clock-neo/ski-clock-neo/firmware/ski-clock-neo/ota_update.h: In function 'bool performOTAUpdate(String)':
/home/runner/work/ski-clock-neo/ski-clock-neo/firmware/ski-clock-neo/ota_update.h:383:27: error: 'class UpdaterClass' has no member named 'errorString'; did you mean 'getErrorString'?
  383 |     Serial.println(Update.errorString());
      |                           ^~~~~~~~~~~
      |                           getErrorString

Error during build: exit status 1

Used library      Version Path                                                                                       
Adafruit NeoPixel 1.15.2  /home/runner/Arduino/libraries/Adafruit_NeoPixel                                           
ESP8266WiFi       1.0     /home/runner/.arduino15/packages/esp8266/hardware/esp8266/3.1.2/libraries/ESP8266WiFi      
ESP8266WebServer  1.0     /home/runner/.arduino15/packages/esp8266/hardware/esp8266/3.1.2/libraries/ESP8266WebServer 
AutoConnect       1.4.2   /home/runner/Arduino/libraries/AutoConnect                                                 
DNSServer         1.1.1   /home/runner/.arduino15/packages/esp8266/hardware/esp8266/3.1.2/libraries/DNSServer        
EEPROM            1.0     /home/runner/.arduino15/packages/esp8266/hardware/esp8266/3.1.2/libraries/EEPROM           
PageBuilder       1.5.6   /home/runner/Arduino/libraries/PageBuilder                                                 
LittleFS          0.1.0   /home/runner/.arduino15/packages/esp8266/hardware/esp8266/3.1.2/libraries/LittleFS         
SD                2.0.0   /home/runner/.arduino15/packages/esp8266/hardware/esp8266/3.1.2/libraries/SD               
SDFS              0.1.0   /home/runner/.arduino15/packages/esp8266/hardware/esp8266/3.1.2/libraries/SDFS             
SPI               1.0     /home/runner/.arduino15/packages/esp8266/hardware/esp8266/3.1.2/libraries/SPI              
ESP8266SdFat      2.1.1   /home/runner/.arduino15/packages/esp8266/hardware/esp8266/3.1.2/libraries/ESP8266SdFat     
Ticker            1.0     /home/runner/.arduino15/packages/esp8266/hardware/esp8266/3.1.2/libraries/Ticker           
ArduinoJson       7.4.2   /home/runner/Arduino/libraries/ArduinoJson                                                 
ESP8266HTTPClient 1.2     /home/runner/.arduino15/packages/esp8266/hardware/esp8266/3.1.2/libraries/ESP8266HTTPClient
ESP8266httpUpdate 1.3     /home/runner/.arduino15/packages/esp8266/hardware/esp8266/3.1.2/libraries/ESP8266httpUpdate

Used platform   Version Path                                                           
esp8266:esp8266 3.1.2   /home/runner/.arduino15/packages/esp8266/hardware/esp8266/3.1.2
Error: Process completed with exit code 1.